refactor(logging decoupling): Split into multiple sub-modules

--- a/_examples/logging/log.ini
+++ b/_examples/logging/log.ini
@@ -13,7 +13,7 @@ handler = root_handler,console_handler
 [logger_log1]
 level = debug
 stack_level = error
-handler = log1_handler
+handler = log1_handler,console_handler
 
 [logger_console]
 level = debug
